# msi2slstr-training-lightning-implementation

./: .gitignore  README.md  debugging.yaml  emissivity.yaml  experiment_2.yaml  hparams.yaml  msi2slstr-training.py  prediction.yaml  pretraining.yaml  pyproject.toml  requirements.txt  thermal.yaml  training.yaml
.github/workflows/: deployment.yaml
config/: __init__.py  data.yaml  model.yaml
datamodule/: dataset.py  lightning.py
datamodules/: datasets.py  emissivity.py  experiment_1.py  experiment_2.py  fusion.py  lightning.py  stats.py  utils.py
metrics/: fusion.py  latent.py  report.py  ssim.py  supervision.py
modules/: __init__.py  components.py  config.yaml  emissivity.py  experiment_1.py  experiment_2.py  lightning.py  radiometry.py
pretrained/: emissivity.ckpt
scripts/: export_onnx.py  gif-export.py  onnx-export.py  stats.py
tests/datamodule/: test_dataset.py  test_lightningdatamodule.py
tests/metrics/: test_fusion.py  test_ssim.py
tests/test_metrics/: test_ssim.py
transformations/: normalization.py  resampling.py
